@@ -5,6 +5,11 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 08-04-2005 changed: <visible> tag in image controls is now a boolean conditional.  eg <visible>Player.HasMedia</visible> will cause the image to be rendered only if the player has something playing (or paused). 
+  - 08-04-2005 changed: Z-buffer now used throughout the GUI (more mem usage, but it's needed for the visz)
+  - 08-04-2005 changed: Hardware overlays renderer drops down to low quality pixel shader for the GUI.  Means
+                        we have more mem free + the use of alpha.
+  - 08-04-2005 fixed: Fullscreen Visualisation render order if no visualisation control present.
   - 07-04-2005 changed: alpha-numeric sorting is now case-insensitive.
   - 07-04-2005 changed: Reduced Karaoke settings considerably.
   - 07-04-2005 fixed: SetViewPort() crash if given out of range values.
